4年で印象に残った用語まとめ sqlのパターンまとめ

--- a/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
+++ b/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
@@ -271,6 +271,15 @@ Linuxのswap領域のあれ。
 ページングがページと呼ばれる単位に細切れにして管理する方式なら、こちらはファイルごと移動させるやり方。  
 まとめて移動させる固まりを「セグメント」として、メモリとやり取りする。  
 
+### フルアソシアティブ方式
+
+コンピュータ内部のメインメモリ（主記憶装置）とキャッシュメモリの間でデータ格納位置の対応付けを行う方式の一つで、メインメモリのアドレスとは無関係にキャッシュ上の位置を決めてデータを格納する方式。  
+
+メインメモリのアドレスとは無関係にキャッシュ内の空いている領域にデータを保管する。  
+異なるアドレス間でキャッシュ位置の衝突が発生しないため最もキャッシュヒット率は高くなるが、読み出し時の探索コストが大きく、また、装置の構成が複雑で実装が難しいため、実際にはあまり採用されることはない。  
+
+※令和4年
+
 ### スプーリング
 
 プリンタなどの低速な入出力装置に対するデータの転送を磁気ディスク装置などを介して実行する機能のことです。  
