--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -629,6 +629,37 @@ Windowsをインストールしたらやること
 
 ---
 
+## XBRL(eXtensible Business Reporting Language)
+
+各種事業報告用の情報（財務・経営・投資などの様々な情報）を作成・流通・利用できるように標準化されたXMLベースのコンピュータ言語です。  
+特に、組織における財務情報・開示情報（財務諸表や内部報告など）の記述に適しています。  
+
+たとえば財務情報は、年度ごと、あるいは組織や業種ごとに、文書構造や項目、計算式などが異なるといった特徴があります。  
+このため、従来の作成方式では作成コストがかかるだけでなく、共通化や二次利用が困難です。  
+XBRLを用いることにより、ソフトウェアやプラットフォームの壁を越えて、電子的な事業報告の作成や流通・再利用を容易に行うことが可能になります。  
+
+※令和4年
+
+## RoHS(Restriction of Hazardous Substances Directive , 危険物質に関する制限令)
+
+電子・電気機器における特定有害物質の使用制限についての欧州連合(EU)指令である。  
+日本語では電気・電子機器に含まれる特定有害物質の使用制限に関する欧州議会及び理事会指令等と訳される。  
+
+読み方は「ローズ」  
+※令和4年  
+
+## SAML(Security Assertion Markup Language)
+
+SAML認証はインターネットドメイン間でユーザー認証を行なうためのXML（マークアップ言語）をベースにした標準規格です。  
+一度のログインで複数のサービスにログインできるシングルサインオンを実現するための規格として利用されることが多いです。  
+
+SAML認証を用いたログインの際、ユーザー認証だけでなく属性情報も認証できるため、ユーザーのアクセス範囲も制限できるという特徴を持ちます。  
+読み方は「サムル」  
+
+※令和4年
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -641,6 +672,24 @@ NaN (not-a-number)
 sql N''
 http://once-and-only.com/programing/sql/sql%E3%81%AEn%E3%83%97%E3%83%AC%E3%83%95%E3%82%A3%E3%83%83%E3%82%AF%E3%82%B9%E3%81%A3%E3%81%A6%E3%81%84%E3%81%A3%E3%81%9F%E3%81%84%E4%BD%95%EF%BC%9F/
 [MS SQLServer のSQLで文字列の前にN:](https://oshiete.goo.ne.jp/qa/280266.html)
+
+
+Notionって高さ決めてその中でスクロールしたり記述したりできないのか。
+
+・注文
+・自己申告書
+・株買う
+
+次の水曜、晴れてたらタイヤ交換とオイル交換する。
+自転車も出す。
+5%オフの買い物もする。
+散歩もする。
+パソコンの件も進める。
+この日にエアリズムが届いたら帰りに寄って回収ってのが理想だな。
+
+エアリズム買うときぺいぺい残高があって助かった。
+
+
 
 ``` C#
         private void FlexGrid_Click(object sender, MouseButtonEventArgs e)
