--- a/AppliedInformation/応用情報令和4年春季反省.md
+++ b/AppliedInformation/応用情報令和4年春季反省.md
@@ -47,8 +47,8 @@
 
 ## 午前
 
-``` txt
-01 : ア × エ
+``` txt : 68/80 12問不正解
+01 : ア
 02 : ア
 03 : ウ
 04 : ア
@@ -58,7 +58,7 @@
 08 : エ
 09 : イ
 10 : エ
-11 : ウ
+11 : ウ イ
 12 : ウ
 13 : ア
 14 : ア
@@ -66,25 +66,25 @@
 16 : ウ
 17 : イ
 18 : ウ
-19 : ウ
+19 : ウ イ
 20 : エ
 21 : ウ
 22 : ウ
 23 : ウ
 24 : ウ
-25 : ウ
+25 : ウ ア
 26 : ウ
 27 : ア
 28 : ウ
-29 : ウ
+29 : ウ ア
 30 : ア
 31 : イ
 32 : ウ
-33 : ア × イ
-34 : エ
+33 : ア イ
+34 : エ ア
 35 : エ
 36 : エ
-37 : エ
+37 : エ ウ
 38 : エ
 39 : ア
 40 : イ
@@ -95,7 +95,7 @@
 45 : ウ
 46 : エ
 47 : イ
-48 : エ
+48 : エ ア
 49 : エ
 50 : エ
 51 : ア
@@ -107,16 +107,16 @@
 57 : イ
 58 : ア
 59 : イ
-60 : イ
+60 : イ ア
 61 : ア
 62 : エ
 63 : イ
-64 : エ
+64 : エ ウ
 65 : ア
 66 : ア
 67 : ウ
 68 : ウ
-69 : イ
+69 : イ エ
 70 : エ
 71 : ウ
 72 : ウ
@@ -127,7 +127,7 @@
 77 : エ
 78 : ア
 79 : ウ
-80 : イ × エ
+80 : イ エ
 ```
 
 ## セキュリティ
