--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -680,6 +680,31 @@ http://once-and-only.com/programing/sql/sql%E3%81%AEn%E3%83%97%E3%83%AC%E3%83%95
 [MS SQLServer のSQLで文字列の前にN:](https://oshiete.goo.ne.jp/qa/280266.html)
 
 
+2万もらえる上にごみを処分できると考えれば上出来だろう。
+960の相場とssdの相場を合わせても2万は結構いいところだと思うけどな。
+まぁ、俺は自作勢ではないので、詳しい相場は分からんけどね。
+あっさり売れてしまったのでもっと吹っ掛けてもよかったかと思ったが、こんなリスクのあるものに吹っ掛けたところでやっぱりリスクしかないし、
+
+興味のないものに興味を持とうとすること自体がすでに苦痛だ。
+
+
+自転車通勤するならエネルギー補給はやっておいたほうがいいかもね。
+バナナが最適だけど、すぐ悪くなるからなぁ。
+
+帰りに100均でガムテープ。
+マックスバリューいって段ボールをかき集める。
+今日は荷造りで終わりだな。
+ケーブルコードも2，3拝借しよう。
+新聞紙もね。
+確定申告のあれは、動画見ながらやらないとわからない。
+まとめるならnotionでいけそう。
+
+今日中にItemsControlのサンプルを作りたい。
+23日は一日中好きな勉強ができそう。
+JavaSilverについても調べたい。
+
+
+
 ``` C#
         private void FlexGrid_Click(object sender, MouseButtonEventArgs e)
         {
