--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -551,6 +551,17 @@ IETFによってRFC 7519として標準化されている。
 
 ---
 
+## NaN (Not a Number)
+
+[1]  
+非数(英語：Not a Number)とは未定義な値か、特に浮動小数点数の計算の結果で、表すことができない数値(データ型)のことを言います。  
+例えば、無限、０で割り算された結果、未定義、負数の平方根 (浮動小数点数は実数ですが、これは虚数です) などは非数と言います。  
+
+[2]  
+コンピュータにおいて、主に浮動小数点演算の結果として、不正なオペランドを与えられたために生じた結果を表す値またはシンボルである。  
+
+---
+
 [DataGridView編メニュー](https://dobon.net/vb/dotnet/datagridview/)
 [ItemsControl 攻略 ～ 外観のカスタマイズ](http://grabacr.net/archives/1240)
 [WPF】ItemsControlの基本的な使い方](https://qiita.com/ebipilaf/items/c3e9e501eb0560a12ce8)
@@ -605,40 +616,39 @@ abstract           | interface
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
 
-NaN (not-a-number)
 
-``` C#
-        private void FlexGrid_Click(object sender, MouseButtonEventArgs e)
-        {
-            if (sender is C1FlexGrid fg)
-            {
-                var ht = fg.HitTest(e);
-                if (ht.CellType == CellType.ColumnHeader)
-                {
-                    ////    Application.Current.Dispatcher.Invoke(
-                    ////        () =>
-                    ////        {
-                    //if (fg.FinishEditing(true))
-                    //{
-                    //    //fg.Select(-1, -1, false);
+会社のinterface見てみたけど、プロパティの定義しかしてなかったな。
+何ができるかの情報は特になかった。
+電話の例が分かりやすかったのであれを採用しつつ、独自に考えるしかないかねぇ。
 
-                    //    //fg.CollectionView.SortDescriptions.Clear();
-                    //    //fg.CollectionView.SortDescriptions.Add(
-                    //    //      new System.ComponentModel.SortDescription(
-                    //    //          fg.Columns[ht.Column].BoundPropertyName,
-                    //    //          System.ComponentModel.ListSortDirection.Ascending
-                    //    //      )
-                    //    //  );
-                    //}
-                    ////}
-                    ////);
-                }
-                else
-                {
-                    fg.StartEditing(true);
-                }
-                //MessageBox.Show($"クリックされたセル{Environment.NewLine}行：{ ht.Row}{Environment.NewLine}列：{ht.Column}");
-            }
-        }
-```
+
+日曜の朝の爽やかに晴れた日の自転車は最高だな。
+今日はちゃんとティッシュ用意したから悲惨になることはなかったぞ。
+でも、3枚余裕で消化できるほどには涙も鼻水も出ることが分かった。
+
+
+パソコンが受け取り評価された。早すぎる。
+いや、いいんだけど、陸送だからもっと時間かかるものだと思ってたので以外だった。
+メモリ、CPU、SSD、HDD、グラボを含めて2万と考えれば安いほうだったのかもしれないが、まぁ、そこは専門家に任せたほうがいいだろう。
+ケースとかマザボまでさばいてたら、費用対効果が悪くなってたはずだ。
+何はともあれタスクの一つが完了です。
+
+
+やること分かってる修正は楽しいなぁ。
+やることわかってない修正はくそだなぁ。
+
+
+あかん。マジで張り合いがない。
+うーん・・・。
+でも転職活動始めたら一気に余裕なくなるだろうしなぁ。
+ご褒美って訳でもないけど、もう少しなんか欲しいよなぁ。
+うーん・・・。
+
+
+今日はItemsControlの研究で進展がありました。
+完全に理解できたわけではありませんが、理想とする動作を実現できました。
+素直にうれしい。
+久しぶりにガッツポーズしました。
+後はちゃんとまとめて、再現性のあるようにしておけばよさそうですね。
+
 
