--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -609,11 +609,60 @@ abstract           | interface
 処理を記述できる。   定義だけ。
 ```
 
+https://suin.io/522
+https://teratail.com/questions/70213
+https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
+
 ---
 
 ## 雑記
 
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
+
+``` xml
+ItemsPanel
+    <Setter Property="ItemsPanel">
+        <Setter.Value>
+            <ItemsPanelTemplate>
+                <Grid></Grid>
+            </ItemsPanelTemplate>
+        </Setter.Value>
+    </Setter>
+```
+
+``` xml
+    <Style x:Key="CloseButton" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Button Command="{TemplateBinding Command}" Margin="0" Padding="0" VerticalAlignment="Center" Height="22">
+                        <Border Margin="4,0" MaxWidth="14" CornerRadius="1">
+                            <Image Stretch="None" RenderOptions.BitmapScalingMode="Fant" Source="{Binding Source={StaticResource res}, Converter={StaticResource ResourceImageConverter}, Path=Resources.closeerror}" />
+                        </Border>
+                    </Button>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+```
+
+https://dobon.net/vb/dotnet/vb2cs/event.html
+
+https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/
+
+
+やっぱり早めに出るのが一番だ。
+時間的余裕はよい気分の第一歩だ。
+
+
+体が痛い。
+まだ筋肉痛が続く。
+花粉症もひどくなってきた。
+昨日注文してよかった。
+今日の天気は花粉多めらしい。
+やっぱりもう飛んでるんだな。
+対策始めとしてはいいタイミングだろう。
+
 
 
