--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -613,10 +613,97 @@ https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
 
 ---
 
+## 初期化奮闘記
+
+配列を宣言してFor文で回して値をいれるやり方をもっと洗練できないか試行錯誤したのでまとめる。  
+すぐ使い捨てる変数に参照型は使いたくなかったので、ValueTuple一択だったが、どうやってLinqだけで初期化できるかが分かりそうで分からなかった。  
+最初はLinq.Repeatを使ったが、初期化に無駄があったのでLinq.Rangeを使うことで解決できた。  
+
+``` C#
+    // 元からあった例
+    // 愚直に配列を宣言してそれからFor文に入る。
+    // 変数を2つも用意しないといけないし、New一回で初期化が終わってくれないのでどうしても野暮ったく感じてしまう。
+    // 最も原始的で分かりやすいんだけど、古臭い。
+    var cash = new TFr_FrontCashDetail[10];
+    for (int i = 0; i <= cash.Length - 1; i++)
+    {
+        var tmp = frontCashDetail.FirstOrDefault(f => f.DailyReportItemCD == i);
+        cash[i] = new TFr_FrontCashDetail()
+        {
+            DailyReportItemName = tmp?.DailyReportItemName,
+            Amount = tmp?.Amount ?? decimal.Zero
+        };
+    }
+
+    // 最初に思いついた案。
+    // 繰り返し処理ならRepeatだったが、Repeatの中で一回初期化しないといけないし、そのあとで値を入れなおすので無駄があった。
+    var bbb = Enumerable
+        .Repeat<(string Name, decimal Disp, decimal Calc)>(("", 0, 0), 5)
+        .Select((s, i) =>
+        {
+            var item = balanceDetailList.FirstOrDefault(f => f.CalcItemCD == i + 1);
+            s.Name = item?.CalcItemName;
+            s.Disp = item?.Amount ?? decimal.Zero;
+            s.Calc = item?.CashExcessOrDeficiencyCalcType switch
+            {
+                CalculationType.NotCalc => 0,
+                CalculationType.Plus => item.Amount.Value,
+                CalculationType.Minus => -item.Amount.Value,
+                _ => 0,
+            };
+            return s;
+        }).ToList();
+
+    // 完成案
+    // RangeをFor文に見立て、indexをSelectで取得。Select内でタプルを初期化して最後にToList()することで目的を達成できた。
+    var aaa = Enumerable
+        .Range(0, 5)
+        .Select(i =>
+        {
+            var item = balanceDetailList.FirstOrDefault(f => f.CalcItemCD == i + 1);
+            return (
+                Name: item?.CalcItemName,
+                Disp: item?.Amount ?? decimal.Zero,
+                Calc: item?.CashExcessOrDeficiencyCalcType switch
+                {
+                    CalculationType.NotCalc => 0,
+                    CalculationType.Plus => item.Amount.Value,
+                    CalculationType.Minus => -item.Amount.Value,
+                    _ => 0,
+                }
+            );
+        }).ToList();
+```
+
+---
+
+## aa
+
+``` C#
+        // Your code here!
+        decimal? aa = null;
+        var aac = -aa ?? decimal.Zero;
+        // 「0」と表示される
+        System.Console.WriteLine(aac);
+        
+        // Main.cs(10,20): error CS0103: The name `Disp' does not exist in the current context
+        var www = (
+            Disp: aa,
+            Calc: -Disp
+        );
+        System.Console.WriteLine(www.Calc);
+```
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
+
+三国峠 道 北海道 日本
+
+Resourceで定義したStyleを充てる方法。
 
 ``` xml
 ItemsPanel
@@ -651,3 +738,18 @@ https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E
 
 
 
+
+
+面倒くさいけどオロナインを塗ると全然治りが違う。
+これからも頑張っていこう。
+今日は眠れた。
+寝たりないけど、これくらいで充分だ。
+
+
+いい加減オイル交換したい。
+前半GW中に予約できそうだから、そこで頼むか。
+→
+5/1日曜の10時に予約した。
+遅番出社なのであさイチで店に駆け込み、車をおいて仕事に行く。
+昼に取りに行けばいい感じになるだろう。
+それなら問題ないはず。
