git rever reset関係

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -653,3 +653,39 @@ https://dobon.net/vb/dotnet/vb2cs/event.html
 
 https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/
 
+
+
+起きてすぐにレザーマット購入。
+メルカリのDポイント連携もしておいた。
+なんか、いつだか500円クーポンが出るキャンペーンやってた気がするけど、まぁいいか。
+もう遅い。
+
+出社前にオイル交換に出して徒歩で出社。
+LINEクーポン、Tポイント、楽天ポイントを使った各種値引きも完了。
+うまいこと言ってるんだけど、なんか気持ちがすっきりしない。
+焦燥感がやばい。
+
+仕事してる場合じゃないんだよな。
+やりたいことたくさんありすぎて死ぬ。
+
+
+今、レザーマットを新しく買い替える理由はまったくないけど、憧れというか、お金に糸目をつけなければこれがいいなぁというものが安く出品されてたから買った。
+完全に自己満足だけど、買い物なんてそんなものだろう。
+自分が追い求める価値と交換することこそ、お金の使い道なのだ。
+
+
+バッテリーが56%で交換推奨だって。
+まぁ、悪いのは知ってたが、まさかそれほどとはなぁ。
+近いうちに交換するとは思うけど、前に交換したのはいつだったか・・・。
+2020年の8月らしい。
+2年も持たなかったか。
+乗り方が悪いのは重々承知していた。
+
+
+なんとなく、会社に帰り際にドライブしてみたけど、全然気持ちが晴れない。
+モヤモヤする。
+今年こそここを脱出しないといけないってプレッシャーがかかってきた。
+憂鬱だ。
+マジでここにずっといても仕方がないって思ってる。
+山田さんの気持ちが分かった。
+
