git,trigger,sqlテク追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -649,6 +649,46 @@ ItemsPanel
     </Style>
 ```
 
+http://nineworks2.blog.fc2.com/blog-entry-33.html?sp
+http://pro.art55.jp/?eid=1303828
+
+``` xml
+
+<i:Interaction.Triggers>
+    <l:InteractionMessageTrigger MessageKey="FlexGridInvalidateAction" Messenger="{Binding Messenger}">
+        <i:CallMethodAction MethodName="ArrangeScroll" />
+    </l:InteractionMessageTrigger>
+
+    <i:EventTrigger EventName="GotFocus">
+        <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Hidden" />-->
+        <i:CallMethodAction MethodName="OnSizeChanged" />
+    </i:EventTrigger>
+</i:Interaction.Triggers>
+
+
+        <i:Interaction.Triggers>
+    <!--<l:InteractionMessageTrigger MessageKey="FlexGridInvalidateAction" Messenger="{Binding Messenger}">
+    -->
+    <!--<i:CallMethodAction MethodName="ArrangeScroll" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}}" />-->
+    <!--
+        <i:CallMethodAction MethodName="InvalidateVisual" />
+    -->
+    <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Hidden" />-->
+    <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Auto" />-->
+    <!--
+    </l:InteractionMessageTrigger>-->
+
+    <i:EventTrigger EventName="ItemsSourceChanging">
+        <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Hidden" />
+    <i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Auto" />
+    <i:CallMethodAction MethodName="Clear" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}, Path=CollectionView.SortDescriptions}" />
+    <i:CallMethodAction MethodName="ArrangeScroll" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}}" />-->
+
+        <i:CallMethodAction MethodName="InvalidateVisual" />
+    </i:EventTrigger>
+</i:Interaction.Triggers>
+```
+
 https://dobon.net/vb/dotnet/vb2cs/event.html
 
 https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/
@@ -688,4 +728,36 @@ LINEクーポン、Tポイント、楽天ポイントを使った各種値引き
 憂鬱だ。
 マジでここにずっといても仕方がないって思ってる。
 山田さんの気持ちが分かった。
+
+---
+
+ItemsControlとScrollViwerがある程度落ち着いてきたので、次はマルチセレクトコンボボックスの実装をしたい。
+昨日考えたことが実装できて個人的には満足である。
+自分自身のリソースに定義して自分自身で呼び出すことができることが分かった。
+その際、StaticResourceではなくDynamicResourceで呼び出す必要があることも分かった。
+StaticとDynamicはどういう性質のものなのかまとめ直したい。
+
+残る課題としては、GridSpritterが機能しないことかな。
+別になくてもいいんだけど、なぜできないのか、できる方法はないのか気になって仕方がない。
+
+
+
+会社にティッシュ持ってイケー。
+もう少しでなくなる。
+更に予備としてロッカーにもぶち込んで桶。
+
+
+
+今日はテストやって昨日の終わらせて、来場者一覧の過去検索やるかー。
+このタイミングで修正しないと駄目だろう。
+
+
+トイレに入っている間にバッテリー交換の予約完了。
+すごい行動が早くなったな。
+どうせやることになるのだから、早いほうがいい。
+てか、今日の段階でもうだめだなって分かるのでやってもらいます。
+
+・エンジンの始動に明らかな違和感を感じる。
+・ライトが暗い。
+・関係あるか知らないけど、左の窓の操作ができなかった。
 
