・ミディエイトウィンドウでオブジェクトの中身を出力する方法 ・Gridの行列の幅や高さの定義 ・StaticResourceとDynamicResourceの違い ・イベントを観測してコントロールのメソッドを実行したりプロパティを変更する方法

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -547,7 +547,7 @@ IETFによってRFC 7519として標準化されている。
 ⑥「法定内残業」と「法定外残業」
 
 給与明細の見方は、社会人の基本。
-1つでも説明できない方は、僕と一緒に勉強しましょうか✍
+1つでも説明できない方は、僕と一緒に勉強しましょうか
 
 ---
 
@@ -559,6 +559,20 @@ IETFによってRFC 7519として標準化されている。
 
 [2]  
 コンピュータにおいて、主に浮動小数点演算の結果として、不正なオペランドを与えられたために生じた結果を表す値またはシンボルである。  
+
+---
+
+## .NetのバージョンとC#のバージョン早見表
+
+[【C# 機能別】知らん書き方が出てきたらこれを見ろ！C# 10 までの進化を1ページで](https://oita.oika.me/2021/12/23/csharp-10-history)  
+[C# の歴史](https://docs.microsoft.com/ja-jp/dotnet/csharp/whats-new/csharp-version-history)  
+[.NET Framework のバージョン対応表](https://qiita.com/nskydiving/items/3af8bab5a0a63ccb9893)  
+
+---
+
+## アンチパターン
+
+[wiki_アンチパターン](https://ja.wikipedia.org/wiki/%E3%82%A2%E3%83%B3%E3%83%81%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3)
 
 ---
 
@@ -620,8 +634,6 @@ avalon peninsula canada
 
 三国峠 道 北海道 日本
 
-Resourceで定義したStyleを充てる方法。
-
 ``` xml
 ItemsPanel
     <Setter Property="ItemsPanel">
@@ -649,46 +661,36 @@ ItemsPanel
     </Style>
 ```
 
-http://nineworks2.blog.fc2.com/blog-entry-33.html?sp
-http://pro.art55.jp/?eid=1303828
 
-``` xml
+[オブジェクト指向と10年戦ってわかったこと](https://qiita.com/tutinoco/items/6952b01e5fc38914ec4e)  
+[なぜオブジェクト指向は難しいのか](https://qiita.com/tutinoco/items/7f7568cc7dbf7e2276c8)  
 
-<i:Interaction.Triggers>
-    <l:InteractionMessageTrigger MessageKey="FlexGridInvalidateAction" Messenger="{Binding Messenger}">
-        <i:CallMethodAction MethodName="ArrangeScroll" />
-    </l:InteractionMessageTrigger>
-
-    <i:EventTrigger EventName="GotFocus">
-        <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Hidden" />-->
-        <i:CallMethodAction MethodName="OnSizeChanged" />
-    </i:EventTrigger>
-</i:Interaction.Triggers>
+[世界で一番短いサンプルで覚えるMVVM入門](https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/)  
 
 
-        <i:Interaction.Triggers>
-    <!--<l:InteractionMessageTrigger MessageKey="FlexGridInvalidateAction" Messenger="{Binding Messenger}">
-    -->
-    <!--<i:CallMethodAction MethodName="ArrangeScroll" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}}" />-->
-    <!--
-        <i:CallMethodAction MethodName="InvalidateVisual" />
-    -->
-    <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Hidden" />-->
-    <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Auto" />-->
-    <!--
-    </l:InteractionMessageTrigger>-->
 
-    <i:EventTrigger EventName="ItemsSourceChanging">
-        <!--<i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Hidden" />
-    <i:ChangePropertyAction PropertyName="HorizontalScrollBarVisibility" Value="Auto" />
-    <i:CallMethodAction MethodName="Clear" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}, Path=CollectionView.SortDescriptions}" />
-    <i:CallMethodAction MethodName="ArrangeScroll" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}}" />-->
+髪がもうだめ。
+眉毛も駄目。
+バッテリーも駄目。
+人間関係も駄目だな。
+駄目駄目だ。
+昨日の喜びも束の間って感じだな。
+次の休みにいったん整える必要があるな。
 
-        <i:CallMethodAction MethodName="InvalidateVisual" />
-    </i:EventTrigger>
-</i:Interaction.Triggers>
-```
 
-https://dobon.net/vb/dotnet/vb2cs/event.html
+頭の中ごちゃごちゃしすぎてやばいので雨だけど散歩した。
+連勤になってから散歩してなかったからな。
+なんか、ごちゃごちゃというか、心ここに非ずって感じだ。
+あー、駄目だなー俺みたいに思ってる。
+いくら応用の勉強頑張っても転職というメインイベントの準備何もしてないからなぁ。
+転職する前に確認しないといけないことなんて五万とあるしなぁ。
 
-https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/
+・MVC、MVVM
+・デザインパターン
+・オブジェクト指向とは
+・DIとは
+・DIコンテナ
+etc...
+
+早く休みたい。
+ただそれだけだ。
