ちょっと整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -668,29 +668,6 @@ ItemsPanel
 [世界で一番短いサンプルで覚えるMVVM入門](https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/)  
 
 
+なぜフラグ引数を渡してはいけないのか。
+幹事対応、代表者制御の時に実感したのでまとめたいと思ったんだった。
 
-髪がもうだめ。
-眉毛も駄目。
-バッテリーも駄目。
-人間関係も駄目だな。
-駄目駄目だ。
-昨日の喜びも束の間って感じだな。
-次の休みにいったん整える必要があるな。
-
-
-頭の中ごちゃごちゃしすぎてやばいので雨だけど散歩した。
-連勤になってから散歩してなかったからな。
-なんか、ごちゃごちゃというか、心ここに非ずって感じだ。
-あー、駄目だなー俺みたいに思ってる。
-いくら応用の勉強頑張っても転職というメインイベントの準備何もしてないからなぁ。
-転職する前に確認しないといけないことなんて五万とあるしなぁ。
-
-・MVC、MVVM
-・デザインパターン
-・オブジェクト指向とは
-・DIとは
-・DIコンテナ
-etc...
-
-早く休みたい。
-ただそれだけだ。
