細かいのまとめ

--- a/Programming/コーディング規約.md
+++ b/Programming/コーディング規約.md
@@ -37,6 +37,10 @@ execとかrunとかmainという名前には要注意です。
 StrategyパターンとかCommandパターンとかが解決の糸口になることもあります。
 ```
 
+## なぜフラグ引数を渡してはいけないのか
+
+幹事対応、代表者制御の時に実感したのでまとめたいと思ったんだった。
+
 ---
 
 ## 引き数は不変
