・sql整理 ・MultiSelectCombo削除 ・整理整頓など

--- a/Programming/メモ.md
+++ b/Programming/メモ.md
@@ -68,3 +68,20 @@ staticはインスタンスを生成しないのは①でやった通り。
 いちいちnewしてメモリを確保する手間がいらない。  
 
 [わい、static変数とstaticメソッドについて熱く語る](https://qiita.com/Nekonecode/items/19f3a261a8391853ddec)  
+
+---
+
+## MVC(Model View Controler)
+
+やはりお前らのmvcは間違っている  
+[PHPerのMVCの一体どこが間違っていたのか](https://mugeso.hatenadiary.org/entry/20121224/1356345261)  
+
+### なぜMVCは廃れたのか
+
+---
+
+## MVVM(Model View ViewModel)
+
+プログラムの構成をView(見た目),ViewModel(見た目とデータの制御),Model(データの制御)に分けた物。
+基本的に、View,ViewModel間のやり取りはプロパティのBindingを行う。
+プロパティ変更通知はINotifyPropertyChangedインターフェースを使用するが、Prismは便利なサポート
