・ref out ・git 特定ブランチ push ・xceed解析 ・ぐち ・整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -608,8 +608,6 @@ https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
 
-三国峠 道 北海道 日本
-
 ``` xml
 ItemsPanel
     <Setter Property="ItemsPanel">
@@ -638,7 +636,152 @@ ItemsPanel
 ```
 
 
-[オブジェクト指向と10年戦ってわかったこと](https://qiita.com/tutinoco/items/6952b01e5fc38914ec4e)  
-[なぜオブジェクト指向は難しいのか](https://qiita.com/tutinoco/items/7f7568cc7dbf7e2276c8)  
 
-[世界で一番短いサンプルで覚えるMVVM入門](https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/)  
+花粉症もやばいね。
+鼻周りがカサカサ。
+中も切れてるはず。
+薬を飲んでいてもつらい。
+目薬は必須。
+
+
+
+・取引色々、出荷のために奔走
+・帰りのサイクリングが最高すぎた
+・書籍を写真に収めた
+・すぐに出品した
+
+・勉強はあまり捗らなかった
+・筋トレのモチベもだめ
+・定期便のシャンプーを決めた
+・地味に酒井君の家が分かってしまった。近くのジェミニってアパートに特徴的なイグニスが止まっていた。
+
+昨日はこんなところ。
+取引関係が多かったように感じる。
+
+サイクリングが最高だった。
+面倒なことを消化できたので少し満足だった。
+定期便を片付けられなかったのが駄目だった。
+
+ちょっと勉強のモチベが下がったかなって感じ。
+知りたいことは山ほどあるんだけど、先にやるべき事をやらないと落ち着かない。
+やるべきことが頭の中心にあってそれどころではない。
+資格試験の時はそれらを指しおいていたからどうでもよかっただけで、そうじゃなくなった今は確実に片付ける必要がある。
+
+GWは総じて満足度は高かったと思う。
+花粉症が残念だった。
+3日目が一番具合悪かったけど、逆にいえば久しぶりにだらだらできたともいえる。
+何やったっけ？
+まぁ、そんな感じのGWでした。
+行くとこ行ったし、やることやったので、よかったのではないでしょうか。
+
+
+
+---
+
+・定期便決定
+・ワクチン再確認
+
+・Java黒本売れた&出荷準備
+
+・ポールにつける小物入れ
+・Thunderbolt4ケーブル
+
+
+今日の朝の目覚めは最高だった。
+よく眠れたし、自然と目が覚めた。
+快眠とはこのことをいうのだろう。
+年に数回あるかないかのイベントだな。
+
+鼻の周りがガビガビだ。
+案の定、鼻の中が切れてる。
+この状態は中々きついだろう。
+
+
+
+今日は定期便の設定をしないといけない
+目標は次の土曜日
+ドリンクを買っておくかどうすべきか迷う。
+シャンプーはいい。
+迷ったら買っておけばいいか。
+
+
+連休空けて思ったけど、顔が怖くないか。
+なんかここ最近の顔つきの変わりようがやばい気がするんだが。
+
+
+なーーーんか仕事に集中できんなぁ。
+遊んでていいか。
+仕事よりGWで消化できなかった物事を消化したいのだが。
+というか、吐き出したいことがたくさんあって仕事どころではない。
+なんか、頭グルグルしてて駄目だ。
+
+あー、そもそも頭回ってない。
+休みボケしたかな。
+なんか霞がかった感じがするな。
+
+あー・・・。
+もう昼めし食って散歩してかえりてーな。
+やればやる気が出るとかいうけど、出ないな。
+
+なんか、今の仕事って仕様の不整合ばかりで技術的なあれがまったくないよなぁ。
+
+
+
+黒本は速攻で売れると思ったけど案外そうでもなかったな。
+まぁでもそのうち売れるでしょう。
+と、思ってたら昼には売れてたわ。
+出荷出荷。
+
+
+
+酒井君も俺みたいなものなのかなぁ。
+いいところ出ても、ゲーム三昧だったらなんでも腐るってやつか。
+なんとなく仕事してるだけだと伸びも遅いだろうなぁ。
+
+
+
+Mahのはチェックボックスの色を変えるためにヘルパーを用意してるんだな。
+チェックボックスの中身を編集するだけでここまでごたごたしないといけないのだから、なんでもできるのはいいけど不便すぎる。
+そう考えるとデフォルトの機能として提供されてもよさそうなものだと思うのだが・・・。
+会社ではチェックボックスの研究に勤しむとして、家ではマルチセレクトを頑張ることにしよう。
+
+チェックボックスに関しては車輪の再発名な感じがするなぁ。
+でも、その車輪がどう動いているか分からないから調べて必要最小限の構成に組みなおすのはまた別の話かな。
+
+
+なるほど。
+XAMLでガチャガチャやるのではなく、C#で同じように生成してしまうのもありなのか。
+昨日YouTubeでやってる人いたよなぁ。
+ちょっとその線でもやってみるか。
+
+
+俺って転職する気あるのかなぁ。
+あるっちゃあるけど、どこ目指してるか分からんのが不安なんよなぁ。
+だからといって何もしないのはねぇ。
+
+
+天気は最高だが、気分はいまいちだな。
+いまいち頭が働かない。
+早く帰りたいとか全てが面倒くさいって思ってる。
+休みボケだと信じたい。
+
+
+
+自転車の鍵の置き場所に関してあれこれ考えてたでしょ。
+でもさ、鍵にそのまま指したままにすればよくねって思った。
+指したままにすれば、チェーン引っ張ったらついてくるし、面倒なことは何一つないわけで。
+
+
+
+何気に気に食わないこととして、黒本の取れ高が微妙なんだよな。
+中心を外れてるし、拡大しすぎて違和感がある。
+もう一回取る？
+うーん・・・、悩ましい。
+
+
+結局会社に残って勉強してしまった。
+月曜なのでバンバン仕事の話が来るけど、仕方ないよね。
+本当はとっとと帰りたかったけど、月曜ってそういう空気じゃん。
+くそな文化だとは思うけど、まぁ仕事してるフリくらいにはなるでしょう。
+
+
