--- a/Programming/メモ.md
+++ b/Programming/メモ.md
@@ -6,6 +6,9 @@
 それっぽい定義で取り繕うしかないけど、人によっては絶対に違うと言われるだろうし、ちょっと足りないって言われる事だろう。  
 ヘタな事を言えば、宗教戦争になりかねない。  
 
+[オブジェクト指向と10年戦ってわかったこと](https://qiita.com/tutinoco/items/6952b01e5fc38914ec4e)  
+[なぜオブジェクト指向は難しいのか](https://qiita.com/tutinoco/items/7f7568cc7dbf7e2276c8)  
+
 ### とりあえず定義
 
 [オブジェクト指向プログラミング](https://e-words.jp/w/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0.html)  
@@ -85,3 +88,5 @@ staticはインスタンスを生成しないのは①でやった通り。
 プログラムの構成をView(見た目),ViewModel(見た目とデータの制御),Model(データの制御)に分けた物。
 基本的に、View,ViewModel間のやり取りはプロパティのBindingを行う。
 プロパティ変更通知はINotifyPropertyChangedインターフェースを使用するが、Prismは便利なサポート
+
+[世界で一番短いサンプルで覚えるMVVM入門](https://resanaplaza.com/%E4%B8%96%E7%95%8C%E3%81%A7%E4%B8%80%E7%95%AA%E7%9F%AD%E3%81%84%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB%E3%81%A7%E8%A6%9A%E3%81%88%E3%82%8Bmvvm%E5%85%A5%E9%96%80/)  
