こまかいのまとめ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -546,9 +546,19 @@ IETFによってRFC 7519として標準化されている。
 
 ---
 
-## アンチパターン
+## アンチパターン (anti-pattern)
 
 [wiki_アンチパターン](https://ja.wikipedia.org/wiki/%E3%82%A2%E3%83%B3%E3%83%81%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3)
+[分かりそう](https://wa3.i-3-i.info/word19389.html)  
+
+システム開発とかにおける「これは悪い意味で定番だよね」な内容をまとめたもの。  
+「あ～、それって一見すると良く見えるかもしれないけどさ～。それをやると、まず間違いなく悪い結果になるんだよね～。でも、よくやっちゃうよね～」なやり方を何となくパターン化してまとめたもの  
+
+デザインパターンはアンチパターンの反対語。  
+設計における「経験豊富な人だったら、こうするだろうね」なノウハウをまとめた定石集。  
+
+デザインパターン : やったほうがいいことまとめ  
+アンチパターン : やらないほうがいいことまとめ  
 
 ---
 
@@ -603,6 +613,33 @@ https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
 
 ---
 
+## ウェブサイトとホームページの違い
+
+[今更聞けないネット知識「ウェブサイト」と「ホームページ」は何が違うのか](https://www.axis-corp.com/quest/website-homepage-difference/)  
+
+### ウェブサイト
+
+個々のページ → ウェブページ  
+複数のウェブページのまとまり → ウェブサイト  
+つまり、サイト全体をウェブサイトと呼ぶ。  
+
+``` txt
+ウェブサイト
+├ トップページ (ウェブページ、ホームページ)
+├ 各記事 (ウェブページ)
+├ お問い合わせ (ウェブページ)
+└ 採用情報 (ウェブページ)
+```
+
+### ホームページ
+
+大きく分けて2つの意味を持つ。  
+
+1. ウェブサイトのトップページのこと  
+2. ブラウザを開いて最初に表示されるページのこと  
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -635,6 +672,14 @@ ItemsPanel
     </Style>
 ```
 
+
+・ワクチン予約(17日)
+・ワクチンのための色々な確認が素早くできた
+・Java黒本出荷
+・ドライブレコーダー取引完了
+
+
+
 0122540002072610
 
 1. おおい内科循環器クリニック 19日 19日を休日 or 20日 21を休日
@@ -645,3 +690,53 @@ ItemsPanel
 脳神経外科 17日 18を休日
 佐藤病院(一野坂) 19日 19日を休日
 えべおつファミリークリニック 19日 19日を休日
+
+
+なぜ18日というアイデアが出てこなかったのか。
+疲れていたのだろうか。
+まぁ、それはいいとして面倒くさいイベントであるワクチンにもある程度目途が立った。
+課長への確認と足立さんへの確認も問題なく済ませた。
+
+必要があれば容赦なく確認する。
+相手が休んでいようと関係ない。
+
+17日10時
+おおい内科循環器クリニック
+予約完了
+また一つ歩を進めることができるな。
+
+
+
+全てが面倒くさい。
+全てが邪魔。
+なんかすげーイライラする。
+知りたいことは山ほどあるのに、何かしようとすると時間がない。
+邪魔なイベントや決めごとばかりが転がっている。
+今はこいつらを殺したい。
+
+
+
+昨日久しぶりに筋トレしたが、全然駄目になってたな。
+全盛期というか、直近で15回できてたのに10回もできなくなってた。
+流石に休みすぎた気がする。
+といっても、色々重なったから仕方ない面もある。
+今日からまた粛々とやっていきたい。
+
+
+あー眠い。
+あーだるい。
+仕事する気失せるぜ。
+
+今日はめっちゃ眠かった。
+30分くらいは寝てたと思う。
+
+
+
+
+モニターアーム。
+中間の支柱をなくした場合ってどうなるのかね。
+今はその通りにやってるけど、そうしなくてもいい場合ってあるのか？
+ちょっと考えてみよう。
+
+
+
