・公式itemscontrolまとめ ・業務アプリ開発について

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -640,6 +640,21 @@ https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
 
 ---
 
+## Windowsデスクトップ向け業務アプリ開発には何を採用すべきか？
+
+[Windowsデスクトップ向け業務アプリ開発には何を採用すべきか？](https://qiita.com/sengoku/items/fb4948e0d2746e3cc26f)  
+
+- UWPで要件を満たせるのであれば[UWP]  
+- Webに慣れた開発者が多ければ[Electron]か[React Native]  
+- iOS/Android向けアプリも一緒に開発するなら[Xamarin]か[React Native]  
+- そうでなければ[WPF]一択  
+
+WPFを選択した場合、.NET Framework 4.7/4.8にするか、.NET Core 3にするのかも選ばなければいけません。  
+将来的なサポートやテストしやすさを考えれば、.NET Core 3から.NET 5へと続く道へ。  
+リリースが間近か、現在ある資産をどうしても手放せないのであれば、.NET Framework 4.7/4.8でしょうか。  
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -671,72 +686,3 @@ ItemsPanel
         </Setter>
     </Style>
 ```
-
-
-・ワクチン予約(17日)
-・ワクチンのための色々な確認が素早くできた
-・Java黒本出荷
-・ドライブレコーダー取引完了
-
-
-
-0122540002072610
-
-1. おおい内科循環器クリニック 19日 19日を休日 or 20日 21を休日
-2. しのじま皮膚科 19日 19日を休日 20日 21を休日
-男澤 19日 19日を休日
-滝川耳鼻科 20日 21を休日
-そらち乳腺・校門 20日 21を休日
-脳神経外科 17日 18を休日
-佐藤病院(一野坂) 19日 19日を休日
-えべおつファミリークリニック 19日 19日を休日
-
-
-なぜ18日というアイデアが出てこなかったのか。
-疲れていたのだろうか。
-まぁ、それはいいとして面倒くさいイベントであるワクチンにもある程度目途が立った。
-課長への確認と足立さんへの確認も問題なく済ませた。
-
-必要があれば容赦なく確認する。
-相手が休んでいようと関係ない。
-
-17日10時
-おおい内科循環器クリニック
-予約完了
-また一つ歩を進めることができるな。
-
-
-
-全てが面倒くさい。
-全てが邪魔。
-なんかすげーイライラする。
-知りたいことは山ほどあるのに、何かしようとすると時間がない。
-邪魔なイベントや決めごとばかりが転がっている。
-今はこいつらを殺したい。
-
-
-
-昨日久しぶりに筋トレしたが、全然駄目になってたな。
-全盛期というか、直近で15回できてたのに10回もできなくなってた。
-流石に休みすぎた気がする。
-といっても、色々重なったから仕方ない面もある。
-今日からまた粛々とやっていきたい。
-
-
-あー眠い。
-あーだるい。
-仕事する気失せるぜ。
-
-今日はめっちゃ眠かった。
-30分くらいは寝てたと思う。
-
-
-
-
-モニターアーム。
-中間の支柱をなくした場合ってどうなるのかね。
-今はその通りにやってるけど、そうしなくてもいい場合ってあるのか？
-ちょっと考えてみよう。
-
-
-
