--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -562,6 +562,24 @@ IETFによってRFC 7519として標準化されている。
 
 ---
 
+## タイプセーフ(型安全)
+
+1. 型の違いによってエラーが起こることを防ぐ仕組みのこと  
+2. コンパイラがコンパイル中に型を検証し、変数に間違った型を割り当てようとするとエラーをスローすること  
+
+``` C#
+Cookie m1 = new Cookie("cookie1", "Value1");
+string i1 = new String('A', 10);
+
+// ==演算子の長所：タイプセーフなので型が違うとコンパイルエラー
+WriteLine($"m1 == i1 {m1 == i1}");
+// Equalsメソッドは型が違っても比較できてしまう
+// 出力：m1[Cookie].Equals(i1[String]) False
+WriteLine($"m1[Cookie].Equals(i1[String]) {m1.Equals(i1)}");
+```
+
+---
+
 [DataGridView編メニュー](https://dobon.net/vb/dotnet/datagridview/)
 
 [wpf入門](https://blog.okazuki.jp/entry/2014/12/27/200015)  
@@ -686,21 +704,3 @@ ItemsPanel
         </Setter>
     </Style>
 ```
-
-
-昨日、一昨日と頑張ったので、今日は少し余裕がある。
-朝のうちに2記事を消化できた。
-パソコンがすぐに立ち上がらなかったのが若干不安だ。
-
-余裕を持って出社できた。
-気持ちがよい。
-ワクチン予約場所を改めて見てみたが、6年間同じ道を通って1回も入ったことがないのはすごいなと思った。
-
-そういえば、朝起きたら上島竜兵が死んだってニュースが流れてたな。
-またしばらくはこの話題で持ち切りだろう。
-
-
-トップチューブバッグもメルカリで購入するか。
-今のトップチューブバッグはファスナー部分がボロボロになってしまった。
-流石に買い替えないと毎回ストレスだ。
-
