--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -704,3 +704,26 @@ ItemsPanel
         </Setter>
     </Style>
 ```
+
+
+[秀丸](https://coralcap.co/2022/05/hidemaru-01/)  
+
+いい加減と思って株かったけど、また急落してたな。
+
+
+だんだん鼻がよくなってきた。
+でかい鼻くそが出たときはちょっとすっきりした。
+
+ねーむい。
+20分遅く起きるようになったけど、7時には目が覚めるので、20分も余計に寝ると遅刻しそうな不安に襲われる。
+今日は夢の中では明確に起きて準備を始めていたんだけど、実はまだ布団の中だったのに気が付いたのは面白かった。
+さすがに4日目なので疲れが出ている。
+筋トレも再開したから色々追いついてない感じがする。
+
+
+昨日はモニターアームに取り付ける小物入れの目途がついたので少しすっきりした。
+安いやつと高いやつがあったけど、明らかに高いほうが評価がいいのでそちらにした。
+本来はマイクスタンドに取り付けるものらしいが、俺と同じようにモニターアームの支柱に取り付けて使ってるレビューもあったので、考えることは同じなんだなーって思った。
+エルゴトロンに使ってる人がいたので、それならもうこれでいいじゃんって訳。
+
+
