xaml系少し整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -580,18 +580,9 @@ WriteLine($"m1[Cookie].Equals(i1[String]) {m1.Equals(i1)}");
 
 ---
 
-[DataGridView編メニュー](https://dobon.net/vb/dotnet/datagridview/)
-
-[wpf入門](https://blog.okazuki.jp/entry/2014/12/27/200015)  
-
-[PrismとLivetで画面を閉じるMVVM](https://redwarrior.hateblo.jp/entry/2020/08/31/090000)  
 [DIYプログラミングでMVVMを推奨しない理由](https://resanaplaza.com/2020/08/13/%E3%80%90wpf%E3%80%91diy%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E3%81%A7mvvm%E3%82%92%E6%8E%A8%E5%A5%A8%E3%81%97%E3%81%AA%E3%81%84%E7%90%86%E7%94%B1/)  
-[Windows Presentation Foundation実践](http://kisuke0303.sakura.ne.jp/blog/wordpress/wp-content/uploads/2016/08/4843696230c1698ad8ff7d086b998344.pdf)
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
-
-[[C# WPF] なんとかしてWPFの描画を速くしたい「Canvas.Childrenへのオブジェクト追加」](https://www.peliphilo.net/archives/2390)
-[WPF で ENTER キーを押したらフォーカス移動するようにする](https://rksoftware.wordpress.com/2016/05/04/001-14/)
 
 [【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
 [【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
@@ -604,9 +595,6 @@ Windowsをインストールしたらやること
 ☑OneDriveの無効化
 ☑Remove-AppxPackage
 ☑PowerShell Coreをインストール
-
-[【WPF】【MVVM】GUIのマウス/キー操作処理をコードビハインドから駆逐する](https://qiita.com/hotelmoskva_/items/13ecc724bdad00078c16)  
-[ダブルクリックイベントを持っていないコントロールで判定を拾う](https://www.hos.co.jp/blog/20200331/)  
 
 ---
 
@@ -628,6 +616,8 @@ abstract           | interface
 https://suin.io/522
 https://teratail.com/questions/70213
 https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
+
+interfaceはcan doの関係  
 
 ---
 
@@ -704,26 +694,3 @@ ItemsPanel
         </Setter>
     </Style>
 ```
-
-
-[秀丸](https://coralcap.co/2022/05/hidemaru-01/)  
-
-いい加減と思って株かったけど、また急落してたな。
-
-
-だんだん鼻がよくなってきた。
-でかい鼻くそが出たときはちょっとすっきりした。
-
-ねーむい。
-20分遅く起きるようになったけど、7時には目が覚めるので、20分も余計に寝ると遅刻しそうな不安に襲われる。
-今日は夢の中では明確に起きて準備を始めていたんだけど、実はまだ布団の中だったのに気が付いたのは面白かった。
-さすがに4日目なので疲れが出ている。
-筋トレも再開したから色々追いついてない感じがする。
-
-
-昨日はモニターアームに取り付ける小物入れの目途がついたので少しすっきりした。
-安いやつと高いやつがあったけど、明らかに高いほうが評価がいいのでそちらにした。
-本来はマイクスタンドに取り付けるものらしいが、俺と同じようにモニターアームの支柱に取り付けて使ってるレビューもあったので、考えることは同じなんだなーって思った。
-エルゴトロンに使ってる人がいたので、それならもうこれでいいじゃんって訳。
-
-
