gitstash , accesor 整理

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -1,5 +1,9 @@
 # 非同期系メモ
 
+[【C#】Task初心者のTask初心者によるTask初心者の為のTask入門](https://qiita.com/OXamarin/items/eddc9f7f01b691631887)  
+
+---
+
 ## Task
 
 TaskクラスはStaticなので宣言する必要はなく、Runさせたい時はTask.Run()でよろしい。  
