リフレクション stash整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1227,3 +1227,20 @@ ItemsPanel
 ```
 
 <https://www.fenet.jp/dotnet/column/language/6175/>
+
+JavaSilverは自宅受験可能。
+LPIC1とほぼ同じ要領で行ける模様。
+
+
+住民税が届いた。
+去年が安すぎた。
+今年は少し高い。
+去年は追納分も考慮された結果な模様。
+まぁ、こんなもんだろう。
+
+
+今日も花粉がすごい。
+自転車に黄色い粉がたくさんついてる。
+それでも散歩しちゃう。
+薬なかったらこんなこともできないのだろう。
+薬に感謝。
