di,mvvm,mvc,task,duration

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -91,6 +91,38 @@ class Program
 }
 ```
 
+``` C#
+    // Taskの実行
+    Task.Run(() => {
+        Console.WriteLine("task1開始");
+        Task.Delay(5000);
+        Console.WriteLine("task1終了");
+    });
+
+    // Taskの実行
+    Task.Run(() => {
+        Console.WriteLine("task2開始");
+        Task.Delay(3000);
+        Console.WriteLine("task2終了");
+    });
+
+    Console.WriteLine("tas111111終了");
+
+
+    //task2開始
+    //tas111111終了
+    //task1開始
+    //task2終了
+    //task1終了
+
+
+    //task1開始
+    //task2開始
+    //tas111111終了
+    //task1終了
+    //task2終了
+```
+
 ---
 
 ## Taskのラムダ式の定義の仕方
