--- a/Programming/オブジェクト指向.md
+++ b/Programming/オブジェクト指向.md
@@ -7,6 +7,10 @@
 ## オブジェクト指向プログラミング
 
 [オブジェクト指向と10年戦ってわかったこと](https://qiita.com/tutinoco/items/6952b01e5fc38914ec4e)  
+[オブジェクト指向と20年戦ってわかったこと](https://qiita.com/shibukawa/items/2698b980933367ad93b4)  
+[オブジェクト指向と30年戦ってわかったこと](https://twitter.com/yukihiro_matz/status/730032023163691009)  
+→オブジェクト指向と30年付き合ってわかったこと: そんなものは実在しない。  
+[オブジェクト指向と戦った戦士達の軌跡](http://nmksb.seesaa.net/article/437810253.html)  
 [なぜオブジェクト指向は難しいのか](https://qiita.com/tutinoco/items/7f7568cc7dbf7e2276c8)  
 
 ### とりあえず定義
