・Enumerable.Empty vs new List ・base64 ・linq union ・その他整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -365,22 +365,6 @@ IETFによってRFC 7519として標準化されている。
 
 ---
 
-[新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
-
-[【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
-[【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
-
-<https://twitter.com/Sheeeeepla/status/1512642396416528387>
-Windowsをインストールしたらやること
-☑Sysinternalsを入れて不要な・サービス・スタートアップを探して止める
-☑NoMeiryoUIでシステムフォントをIBM Plex Sans JPに変更
-☑AutoHotKeyでIME変換キーをAlt単押しで切替可に
-☑OneDriveの無効化
-☑Remove-AppxPackage
-☑PowerShell Coreをインストール
-
----
-
 ## ウェブサイトとホームページの違い
 
 [今更聞けないネット知識「ウェブサイト」と「ホームページ」は何が違うのか](https://www.axis-corp.com/quest/website-homepage-difference/)  
@@ -962,10 +946,44 @@ namespace RN3.Wpf.Common.Data.AppSetting
 
 ---
 
+## Base64
+
+これが必要になったのはセルフオーダーの実装の時である。  
+商品画像を表示しないといけないときに、データベースから画像データをバイナリとして取得して復元しなければならなかった。  
+その時にこのエンコード方式が使われていたので調べることとなった。  
+本当はその時にまとめたかったが余裕がなさ過ぎて後になってしまった。  
+
+[base64ってなんぞ？？理解のために実装してみた](https://qiita.com/PlanetMeron/items/2905e2d0aa7fe46a36d4)  
+[わかりそう](https://wa3.i-3-i.info/word11338.html)  
+
+- データの変換方式  
+- データを64文字の文字（a～z、A～Z、0～9、+、/）と「=」で表現する  
+- メールの添付ファイルの変換等でよく使われる  
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
 avalon peninsula canada
+
+[新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
+
+[【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
+[【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
+
+<https://twitter.com/Sheeeeepla/status/1512642396416528387>
+Windowsをインストールしたらやること
+☑Sysinternalsを入れて不要な・サービス・スタートアップを探して止める
+☑NoMeiryoUIでシステムフォントをIBM Plex Sans JPに変更
+☑AutoHotKeyでIME変換キーをAlt単押しで切替可に
+☑OneDriveの無効化
+☑Remove-AppxPackage
+☑PowerShell Coreをインストール
+
+[.NET 6とVSCodeでデスクトップアプリ（ランチャー）](https://qiita.com/Kosen-amai/items/61e6b03b8e0fccc35ee5)
+[分岐アンチパターン](https://qiita.com/pakkun/items/9bef9132f168ba0befd7)  
+[[WPF/xaml]BasedOnを使って元のstyleを受け継ぐ](https://qiita.com/tera1707/items/3c4f598c5d022e4987a2)
 
 ``` xml
 ItemsPanel
@@ -993,3 +1011,47 @@ ItemsPanel
         </Setter>
     </Style>
 ```
+
+
+・モニターアーム出荷
+・今日も体調が悪い
+・昼休みの散歩も無理だった
+・おかげでtilが捗った
+
+
+汗がすごかった。
+7時には目が覚めた。
+寝たのは20時。最終的に起きたのは8時なので12時間寝たことになるか。
+さすがに12時間も寝ればある程度はよくなる。
+しかし完全によくなっていない。
+左脇まで痛みが広がった。
+昨日ほどのだるさはないものの、油断ならない感じがする。
+はしゃげる程回復していない。
+気分は沈み気味。
+天気も悪いしね。
+
+お昼のおかず持ってくるの忘れた。
+布団を裏返してくるの忘れた。
+思いっきり影響が出ている模様。
+
+久しぶりに車に乗ったが、バッテリーのへたりはない。
+エンジンがぶわーーってかかるのは相変わらず。
+おんぼろだ。
+
+
+今日も筋トレは無理だな。
+昼休みの散歩も無理だった。
+おとなしく会社でtilやった。
+これはこれで楽しかったが目が疲れる。
+やっぱり散歩できるなら散歩がいい。
+
+昼休みはあまり食欲がなく、逆におかずを忘れて正解だったかもしれない。
+それくらいで十分だと感じた。
+
+
+3000円。
+サイズ100なので1000円。
+手数料300円で1700円。
+せちがれぇなぁ。
+まぁでかいものなんてこんなもんよな。
+
